--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <style media="screen">
     body{
       margin: 0;
+      border: 10px solid #192b36;
+
     }
     img{
       max-width: 100%
