--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
     }
     img{
       max-width: 100%
+      vercital-align: top;
     }
-
+    img#responsive{
+      display: none;
+    }
+    @media screen and (max-width: 768px) {
+      img#responsive {
+        display:block;
+      }
+    }
     </style>
   </head>
   <body>
+<img src="invie-responsive.png" alt="" id="responsive">
 <img src="header.jpg" alt="">
 <img src="hero.jpg" alt="">
 <img src="acustica.jpg" alt="">
-<img src="clasica.jpg" alt="">
-<img src="footer.jpg" alt="">
   </body>
 </html>
